--- a/index.css
+++ b/index.css
@@ -106,6 +106,9 @@ p {
         top: 20rem;
         font-size: 100px;
     }
+    .boxtext{
+        background-color: pink;
+    }
     .game {
         top: 400px;
         width: 420px;
@@ -114,7 +117,7 @@ p {
         grid-template-rows: 140px 140px 140px;
     }
     p {
-        top: 50rem;
+        top: 35rem;
         font-size: 5rem;
     }
     .reset {
